RESOLVED FIXED58637
REGRESSION: Rendering in <video> element appears to render quickly to catch up if it has been playing in a background tab
https://bugs.webkit.org/show_bug.cgi?id=58637
Summary REGRESSION: Rendering in <video> element appears to render quickly to catch u...
Jer Noble
Reported 2011-04-14 23:21:53 PDT
1. Load <http://flyingmeat.com/stuff/doubledoubleyourstrokestyle.mov> in a tab, then switch to a background tab. 2. Wait around 30 seconds. 3. Switch back to the tab with the video. The video renders at high speed as it catches back up to the correct playback position.
Attachments
Patch (8.53 KB, patch)
2011-04-14 23:27 PDT, Jer Noble
no flags
Patch (8.53 KB, patch)
2011-04-15 10:34 PDT, Jer Noble
eric.carlson: review+
Jer Noble
Comment 1 2011-04-14 23:22:12 PDT
Jer Noble
Comment 2 2011-04-14 23:27:51 PDT
Eric Carlson
Comment 3 2011-04-15 07:09:15 PDT
Comment on attachment 89742 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=89742&action=review > Source/WebKit2/WebProcess/WebPage/ca/mac/LayerTreeHostCAMac.mm:119 > + CALayer* root = rootLayer()->platformLayer(); > + [[NSNotificationCenter defaultCenter] postNotificationName:@"NSCAViewRenderDidPauseNotification" object:nil userInfo:[NSDictionary dictionaryWithObject:root forKey:@"layer"]]; > + [root setValue:(id)kCFBooleanTrue forKey:@"NSCAViewRenderPaused"]; Shouldn't you set the property before posting the notification? > Source/WebKit2/WebProcess/WebPage/ca/mac/LayerTreeHostCAMac.mm:126 > + CALayer* root = rootLayer()->platformLayer(); > + [[NSNotificationCenter defaultCenter] postNotificationName:@"NSCAViewRenderDidResumeNotification" object:nil userInfo:[NSDictionary dictionaryWithObject:root forKey:@"layer"]]; > + [root setValue:(id)kCFBooleanFalse forKey:@"NSCAViewRenderPaused"]; Ditto.
Jer Noble
Comment 4 2011-04-15 10:34:22 PDT
Jer Noble
Comment 5 2011-04-15 11:07:44 PDT
Note You need to log in before you can comment on or make changes to this bug.